Fixes issue with admonitions in dark mode

--- a/src/css/_admonitions.scss
+++ b/src/css/_admonitions.scss
@@ -1,12 +1,24 @@
+:root {
+    --wdia-blockquote-color-primary:  #e7ecf3;
+    --wdia-blockquote-color-secondary: #486491;
+    --wdia-blockquote-code-color: var(--ifm-code-background);
+}
+
+[data-theme='dark'] {
+    --wdia-blockquote-color-primary:  #486491;
+    --wdia-blockquote-color-secondary: #e7ecf3;
+    --wdia-blockquote-code-color: rgba(255,255,255, 0.2);
+}
+
 blockquote {
 //   padding: 1rem 2rem;
   padding: var(--ifm-alert-padding-vertical)var(--ifm-alert-padding-horizontal);
-  background-color: #e7ecf3;
+  background-color: var(--wdia-blockquote-color-primary);
 //   background-color: var(--ifm-color-info-contrast-background);
   border-left-width: 0.7rem;
 //   border-left-width: var(--ifm-alert-border-left-width);
   border-left-style: solid;
-  border-color: #486491;
+  border-color: var(--wdia-blockquote-color-secondary);
 //   border-color: var(--ifm-color-info-dark);
 //   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
   box-shadow: var(--ifm-alert-shadow);
@@ -16,7 +28,7 @@ blockquote {
 }
 
 blockquote h4 {
-  color: #486491;
+  color: var(--wdia-blockquote-color-secondary);
   display: block;
   font-size: 1.6rem;
   font-weight: bold;
@@ -33,7 +45,12 @@ blockquote p {
 }
 
 blockquote a, blockquote a:link, blockquote a:visited, blockquote a:hover {
-  color: #486491;
-  border-bottom: 1px dashed#486491;
+  color: var(--wdia-blockquote-color-secondary);
+  border-bottom: 1px dashed var(--wdia-blockquote-color-secondary);
   padding-bottom: 0.15rem;
+  text-decoration: none;
+}
+
+blockquote code {
+    background-color: var(--wdia-blockquote-code-color);
 }
